fix for adaptive not showing gapfeedback and gapfeedback broken css

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     background: white;
 }
 
-.que.gapfill.gapfeedbackincorrect {
+.gapfill .gapfeedbackincorrect {
     background: #faa;
     background-color: #faa;
     border-radius: 0.25em;
@@ -36,7 +36,7 @@
     color: darkslategray;
 }
 
-.que.gapfill.gapfeedbackcorrect {
+.gapfill .gapfeedbackcorrect {
     background: #afa;
     background-color: #afa;
     border-radius: 0.25em;
